--- a/inventory-operations.html
+++ b/inventory-operations.html
@@ -8,36 +8,21 @@
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="css/style.css" />
   <style>
-    .mode-tabs {
-      display: flex;
-      gap: 8px;
-      margin-bottom: 16px;
-      border-bottom: 2px solid #e5e7eb;
-    }
-    .mode-tabs button {
-      padding: 12px 20px;
-      background: none;
-      border: none;
-      border-bottom: 3px solid transparent;
-      cursor: pointer;
-      font-size: 14px;
-      font-weight: 500;
-      color: #6b7280;
-      transition: all 0.3s;
-    }
-    .mode-tabs button.active {
-      color: #4f46e5;
-      border-bottom-color: #4f46e5;
-    }
-    .mode-tabs button:hover {
-      color: #374151;
-    }
-    .mode-content {
-      display: none;
-    }
-    .mode-content.active {
-      display: block;
-    }
+    .mode-tabs {display:flex;gap:10px;flex-wrap:wrap;margin-bottom:16px;}
+    .mode-tabs button {padding:12px 16px;border-radius:999px;border:1px solid #e5e7eb;background:#f8fafc;color:#0a1b2b;font-weight:700;cursor:pointer;transition:all .2s;}
+    .mode-tabs button.active {background:linear-gradient(135deg,#0a1b2b,#0f7a57);color:#fff;border-color:rgba(255,255,255,0.2);box-shadow:0 10px 24px rgba(10,27,43,0.18);}
+    .mode-tabs button:hover {transform:translateY(-1px);box-shadow:0 8px 18px rgba(0,0,0,0.1);}
+    .mode-content {display:none;}
+    .mode-content.active {display:block;}
+    .ops-hero {display:grid;grid-template-columns:1.6fr 1fr;gap:12px;margin-bottom:16px;}
+    .ops-hero .card{margin:0;}
+    .ops-metrics{display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));gap:10px;}
+    .ops-metric{padding:12px;border-radius:12px;border:1px solid #e5e7eb;background:#f8fafc;box-shadow:0 8px 20px rgba(10,27,43,0.08);}
+    .ops-metric .label{color:#6b7280;font-size:12px;font-weight:700;letter-spacing:0.3px;text-transform:uppercase;}
+    .ops-metric .value{font-size:20px;font-weight:800;color:#0f7a57;margin-top:4px;}
+    .ops-list{margin:0;padding-left:18px;color:#4b5563;font-size:14px;line-height:1.5;}
+    .ops-list li{margin-bottom:6px;}
+    @media(max-width:900px){.ops-hero{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
@@ -75,6 +60,26 @@
         <div class="topbar-right"><button id="logoutBtn" class="muted">Logout</button></div>
       </header>
 
+      <div class="ops-hero">
+        <section class="card">
+          <h3 style="margin-bottom:8px;">Operations Control</h3>
+          <ul class="ops-list">
+            <li>Check-In: log arrivals or new on-the-fly purchases (requires name for new codes).</li>
+            <li>Pick (Check-Out): draws from available after reservations, auto-sets 5-day due.</li>
+            <li>Reserve: holds stock for a job; remove from available until released.</li>
+            <li>Return: allowed within 5 days of checkout; enforces outstanding limits.</li>
+          </ul>
+        </section>
+        <section class="card">
+          <div class="ops-metrics">
+            <div class="ops-metric"><div class="label">Available</div><div id="ops-available" class="value">-</div></div>
+            <div class="ops-metric"><div class="label">Reserved</div><div id="ops-reserved" class="value">-</div></div>
+            <div class="ops-metric"><div class="label">Checked Out</div><div id="ops-out" class="value">-</div></div>
+            <div class="ops-metric"><div class="label">Pending Returns</div><div id="ops-due" class="value">-</div></div>
+          </div>
+        </section>
+      </div>
+
       <section class="card">
         <div class="mode-tabs">
           <button class="mode-btn active" data-mode="checkin">Check-In</button>
@@ -101,9 +106,18 @@
                   <option value="">General Inventory</option>
                 </select>
               </label>
+              <label style="max-width:220px;display:flex;align-items:center;gap:6px;margin-top:22px;">
+                <input type="checkbox" id="checkin-stick" style="width:auto;"> Keep job/location for new lines
+              </label>
             </div>
             <div class="form-row">
               <label>Location<input id="checkin-location" placeholder="Warehouse / Shelf"></label>
+            </div>
+            <div class="form-row">
+              <label style="flex:1">Bulk paste (code,qty or code,qty,name per line)
+                <textarea id="checkin-bulk" rows="2" placeholder="ABC123,2&#10;XYZ9,5,Widgets"></textarea>
+              </label>
+              <button id="checkin-bulk-apply" type="button" class="muted" style="margin-top:22px;">Add Lines from Paste</button>
             </div>
             <div class="form-row">
               <label style="flex:1">Notes<textarea id="checkin-notes" rows="2" placeholder="Optional notes"></textarea></label>
