--- a/order-register.html
+++ b/order-register.html
@@ -43,7 +43,7 @@
 
       <section class="card inventory-card">
         <p style="color:#6b7280;margin-top:0;">Admin-only: log items that have been ordered but not yet received.</p>
-        <form id="orderForm" class="inventory-form">
+        <form id="orderForm" class="inventory-form" autocomplete="off">
           <div class="form-row">
             <label>Item Code<input id="orderCode" required placeholder="SKU/part"></label>
             <label>Item Name<input id="orderName" placeholder="Required for new codes"></label>
