--- a/login.html
+++ b/login.html
@@ -22,15 +22,15 @@
     <div class="auth-card">
       <h1>Welcome Back</h1>
       <p style="color:#6b7280;margin-top:0;margin-bottom:16px;">Sign in to continue.</p>
-      <form id="loginForm" class="inventory-form">
+      <form id="loginForm" class="inventory-form" autocomplete="off">
         <div class="form-row">
-          <label>Business Code<input id="login-tenant" placeholder="e.g. acme" required></label>
+          <label>Business Code<input id="login-tenant" placeholder="e.g. acme" required autocomplete="off"></label>
         </div>
         <div class="form-row">
-          <label>Email<input id="login-email" type="email" required></label>
+          <label>Email<input id="login-email" type="email" required autocomplete="off"></label>
         </div>
         <div class="form-row">
-          <label>Password<input id="login-password" type="password" required></label>
+          <label>Password<input id="login-password" type="password" required autocomplete="new-password"></label>
         </div>
         <div class="form-row">
           <button type="submit">Login</button>
