Add developer reset functionality and button to inventory operations

--- a/inventory-operations.html
+++ b/inventory-operations.html
@@ -57,7 +57,10 @@
     <main class="main">
       <header class="topbar">
         <h1>Inventory Operations</h1>
-        <div class="topbar-right"><button id="logoutBtn" class="muted">Logout</button></div>
+        <div class="topbar-right">
+          <button id="devResetBtn" class="muted" style="display:none;background:#b91c1c;color:#fff;border-color:rgba(255,255,255,0.3);">Dev Reset</button>
+          <button id="logoutBtn" class="muted">Logout</button>
+        </div>
       </header>
 
       <div class="ops-hero">
