Add 'Dev Settings' link to navigation in multiple HTML files

--- a/dashboard.html
+++ b/dashboard.html
@@ -35,6 +35,7 @@
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
         <a href="item-history.html" data-role="admin">History</a>
+        <a href="dev-settings.html" data-dev-only style="display:none;">Dev Settings</a>
       </nav>
     </aside>
     <main class="main">
