--- a/order-register.html
+++ b/order-register.html
@@ -24,16 +24,17 @@
         <a  href="dashboard.html" data-role="admin">Admin Dashboard</a>
         <a  href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
-        <a href="inventory-list.html">Inventory</a>
-        <a href="job-report.html">Job Report</a>
-        <a href="item-master.html" data-role="admin">Item Master</a>
-        <a href="job-creator.html" data-role="admin">Job Creator</a>
-        <a class="active" href="order-register.html" data-role="admin">Orders</a>
-        <a href="settings.html" data-role="admin">Settings</a>
-        <a href="settings-employee.html" data-role="employee">Settings</a>
-        <a href="item-history.html" data-role="admin">History</a>
-      </nav>
-    </aside>
+      <a href="inventory-list.html">Inventory</a>
+      <a href="job-report.html">Job Report</a>
+      <a href="item-master.html" data-role="admin">Item Master</a>
+      <a href="job-creator.html" data-role="admin">Job Creator</a>
+      <a class="active" href="order-register.html" data-role="admin">Orders</a>
+      <a href="settings.html" data-role="admin">Settings</a>
+      <a href="settings-employee.html" data-role="employee">Settings</a>
+      <a href="item-history.html" data-role="admin">History</a>
+      <a href="dev-settings.html" data-dev-only style="display:none;">Dev Settings</a>
+    </nav>
+  </aside>
 
     <main class="main">
       <header class="topbar">
