--- a/order-register.html
+++ b/order-register.html
@@ -81,10 +81,10 @@
               <label style="flex:1">Notes<textarea id="orderNotes" rows="2"></textarea></label>
             </div>
             <div class="form-row">
-              <label style="flex:1">Bulk paste (code,name,qty,eta,job)
-                <textarea id="order-bulk" rows="2" placeholder="ABC123,Widgets,2,2025-01-10,JOB-1&#10;XYZ9,,5,2025-01-11,"></textarea>
+              <label style="flex:1">Quick bulk paste (code,name,qty,eta,job)
+                <textarea id="order-bulk" rows="3" placeholder="ABC123,Widgets,2,2025-01-10,JOB-1&#10;XYZ9,,5,2025-01-11,"></textarea>
               </label>
-              <button id="order-bulk-apply" type="button" class="muted" style="margin-top:22px;">Register from Paste</button>
+              <button id="order-bulk-apply" type="button" class="muted" style="margin-top:22px;">Submit bulk</button>
             </div>
             <div class="form-row">
               <button type="submit">Register Order</button>
@@ -142,6 +142,17 @@
             <thead><tr><th>Code</th><th>Job</th><th>Qty</th><th class="mobile-hide">Expected Return</th><th class="mobile-hide">Reserved On</th></tr></thead>
             <tbody></tbody>
           </table>
+        </section>
+
+        <section class="card">
+          <h3>Bulk Reserve (paste)</h3>
+          <p class="muted" style="margin-top:-2px;">Format: code,qty per line. Uses selected job above.</p>
+          <div class="form-row">
+            <label style="flex:1">Lines
+              <textarea id="reserve-bulk" rows="3" placeholder="ABC123,2&#10;XYZ9,5"></textarea>
+            </label>
+            <button id="reserve-bulk-apply" type="button" class="muted" style="margin-top:22px;">Reserve bulk</button>
+          </div>
         </section>
       </div>
     </main>
